feat:MI analysis

--- a/dataCleaning/data_preprocessing.ipynb
+++ b/dataCleaning/data_preprocessing.ipynb
@@ -25,7 +25,9 @@
     }
    },
    "cell_type": "code",
-   "source": "df = pd.read_csv(\"../dataset/bank.csv\", sep=\";\");df",
+   "source": [
+    "df = pd.read_csv(\"../dataset/bank.csv\", sep=\";\");df"
+   ],
    "id": "59d389ea34774038",
    "outputs": [
     {
@@ -391,7 +393,7 @@
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [],
    "id": "9f2102e5035c71d4",
    "outputs": [],
    "execution_count": 4
@@ -401,7 +403,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "d59b0d0f5f624b24"
   }
  ],
