random forest analysis

--- a/featureEngineering/importance-analysis/mi-analysis.ipynb
+++ b/featureEngineering/importance-analysis/mi-analysis.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-10T17:20:43.508345600Z",
-     "start_time": "2024-10-10T17:20:43.458836200Z"
+     "end_time": "2024-10-10T17:53:23.104096400Z",
+     "start_time": "2024-10-10T17:53:23.061875Z"
     }
    },
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -99,15 +99,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-10T17:20:43.602089900Z",
-     "start_time": "2024-10-10T17:20:43.477689600Z"
+     "end_time": "2024-10-10T17:53:23.181275Z",
+     "start_time": "2024-10-10T17:53:23.104096400Z"
     }
    },
    "id": "b84593140035150"
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
@@ -135,8 +135,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-10T17:20:43.683575300Z",
-     "start_time": "2024-10-10T17:20:43.555220300Z"
+     "end_time": "2024-10-10T17:53:23.322795100Z",
+     "start_time": "2024-10-10T17:53:23.181275Z"
     }
    },
    "id": "9c3d590ec653d8e3"
@@ -167,11 +167,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-10T17:53:23.401555700Z",
+     "start_time": "2024-10-10T17:53:23.322795100Z"
+    }
    },
    "id": "83a43a548eddea4d"
   }
