new feature model prediction

--- a/dataCleaning/data_preprocessing.ipynb
+++ b/dataCleaning/data_preprocessing.ipynb
@@ -138,7 +138,9 @@
     }
    },
    "cell_type": "code",
-   "source": "df = pd.read_csv(\"../dataset/bank.csv\", sep=\";\");df",
+   "source": [
+    "df = pd.read_csv(\"../dataset/bank.csv\", sep=\";\");df"
+   ],
    "id": "59d389ea34774038",
    "outputs": [
     {
@@ -776,7 +778,9 @@
     }
    },
    "cell_type": "code",
-   "source": "getMissingValues(df_with_missing)",
+   "source": [
+    "getMissingValues(df_with_missing)"
+   ],
    "id": "70deb46e1d3eeb1b",
    "outputs": [
     {
@@ -1153,7 +1157,9 @@
     }
    },
    "cell_type": "code",
-   "source": "getMissingValues(df_with_missing)",
+   "source": [
+    "getMissingValues(df_with_missing)"
+   ],
    "id": "517dcd063e401de8",
    "outputs": [
     {
@@ -1194,7 +1200,9 @@
     }
    },
    "cell_type": "code",
-   "source": "df_cleaned = remove_outliers_for_columns(df_with_missing);df_cleaned",
+   "source": [
+    "df_cleaned = remove_outliers_for_columns(df_with_missing);df_cleaned"
+   ],
    "id": "e0d6ee2897d3ee68",
    "outputs": [
     {
@@ -1607,7 +1615,9 @@
     }
    },
    "cell_type": "code",
-   "source": "df_cleaned.to_csv(\"cleaned_bank.csv\", index=False)",
+   "source": [
+    "df_cleaned.to_csv(\"cleaned_bank.csv\", index=False)"
+   ],
    "id": "d59b0d0f5f624b24",
    "outputs": [],
    "execution_count": 28
