--- a/featureEngineering/importance-analysis/random-forest-analysis.ipynb
+++ b/featureEngineering/importance-analysis/random-forest-analysis.ipynb
@@ -161,6 +161,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "26e0b1441a3b1a3f"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "outputs": [
     {
