--- a/featureEngineering/feature-selection/feature-selection.ipynb
+++ b/featureEngineering/feature-selection/feature-selection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -213,79 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   balance housing loan default           job       FSI\n",
-      "0   1787.0      no   no      no    unemployed -1.160932\n",
-      "1   1476.0     yes  yes      no    management  0.754809\n",
-      "2      0.0     yes   no      no   blue-collar -1.645083\n",
-      "3    147.0     yes   no      no    technician  0.394744\n",
-      "4    221.0     yes   no      no  entrepreneur  1.414793\n",
-      "Index(['age', 'job', 'marital', 'education', 'default', 'balance', 'housing',\n",
-      "       'loan', 'day', 'month', 'duration', 'campaign', 'y', 'contact_cellular',\n",
-      "       'contact_telephone', 'contact_unknown', 'duration_contact_cellular',\n",
-      "       'duration_contact_telephone', 'duration_contact_unknown',\n",
-      "       'above_median_duration', 'scaled_balance', 'housing_penalty',\n",
-      "       'loan_penalty', 'default_penalty', 'job_score', 'FSI'],\n",
-      "      dtype='object')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "      age           job   marital  education default  balance housing loan  \\\n0      30    unemployed   married    primary      no   1787.0      no   no   \n1      30    management   married   tertiary      no   1476.0     yes  yes   \n2      59   blue-collar   married  secondary      no      0.0     yes   no   \n3      39    technician   married  secondary      no    147.0     yes   no   \n4      41  entrepreneur   married   tertiary      no    221.0     yes   no   \n...   ...           ...       ...        ...     ...      ...     ...  ...   \n2398   33      services   married  secondary      no    288.0     yes   no   \n2399   42        admin.   married    unknown      no    642.0     yes  yes   \n2400   36    technician  divorced  secondary      no    566.0     yes   no   \n2401   49   blue-collar   married  secondary      no    322.0      no   no   \n2402   33      services   married  secondary      no   -333.0     yes   no   \n\n      day month  ...  duration_contact_cellular  duration_contact_telephone  \\\n0      19   oct  ...                         79                           0   \n1       3   jun  ...                          0                           0   \n2       5   may  ...                          0                           0   \n3       6   may  ...                        151                           0   \n4      14   may  ...                          0                           0   \n...   ...   ...  ...                        ...                         ...   \n2398   17   apr  ...                        306                           0   \n2399   16   may  ...                          0                           0   \n2400   20   may  ...                          0                           0   \n2401   14   aug  ...                        356                           0   \n2402   30   jul  ...                        264                           0   \n\n     duration_contact_unknown  above_median_duration  scaled_balance  \\\n0                           0                      0        0.839068   \n1                         199                      1        0.754809   \n2                         226                      1        0.354917   \n3                           0                      0        0.394744   \n4                          57                      0        0.414793   \n...                       ...                    ...             ...   \n2398                        0                      1        0.432945   \n2399                      509                      1        0.528854   \n2400                      129                      0        0.508263   \n2401                        0                      1        0.442157   \n2402                        0                      1        0.264698   \n\n      housing_penalty  loan_penalty  default_penalty  job_score       FSI  \n0                   0             0                0         -2 -1.160932  \n1                  -1            -1                0          2  0.754809  \n2                  -1             0                0         -1 -1.645083  \n3                  -1             0                0          1  0.394744  \n4                  -1             0                0          2  1.414793  \n...               ...           ...              ...        ...       ...  \n2398               -1             0                0          0 -0.567055  \n2399               -1            -1                0          0 -1.471146  \n2400               -1             0                0          1  0.508263  \n2401                0             0                0         -1 -0.557843  \n2402               -1             0                0          0 -0.735302  \n\n[2403 rows x 26 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>job</th>\n      <th>marital</th>\n      <th>education</th>\n      <th>default</th>\n      <th>balance</th>\n      <th>housing</th>\n      <th>loan</th>\n      <th>day</th>\n      <th>month</th>\n      <th>...</th>\n      <th>duration_contact_cellular</th>\n      <th>duration_contact_telephone</th>\n      <th>duration_contact_unknown</th>\n      <th>above_median_duration</th>\n      <th>scaled_balance</th>\n      <th>housing_penalty</th>\n      <th>loan_penalty</th>\n      <th>default_penalty</th>\n      <th>job_score</th>\n      <th>FSI</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>30</td>\n      <td>unemployed</td>\n      <td>married</td>\n      <td>primary</td>\n      <td>no</td>\n      <td>1787.0</td>\n      <td>no</td>\n      <td>no</td>\n      <td>19</td>\n      <td>oct</td>\n      <td>...</td>\n      <td>79</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.839068</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>-2</td>\n      <td>-1.160932</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>30</td>\n      <td>management</td>\n      <td>married</td>\n      <td>tertiary</td>\n      <td>no</td>\n      <td>1476.0</td>\n      <td>yes</td>\n      <td>yes</td>\n      <td>3</td>\n      <td>jun</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>199</td>\n      <td>1</td>\n      <td>0.754809</td>\n      <td>-1</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0.754809</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>59</td>\n      <td>blue-collar</td>\n      <td>married</td>\n      <td>secondary</td>\n      <td>no</td>\n      <td>0.0</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>5</td>\n      <td>may</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>226</td>\n      <td>1</td>\n      <td>0.354917</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>-1</td>\n      <td>-1.645083</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>39</td>\n      <td>technician</td>\n      <td>married</td>\n      <td>secondary</td>\n      <td>no</td>\n      <td>147.0</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>6</td>\n      <td>may</td>\n      <td>...</td>\n      <td>151</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.394744</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.394744</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>41</td>\n      <td>entrepreneur</td>\n      <td>married</td>\n      <td>tertiary</td>\n      <td>no</td>\n      <td>221.0</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>14</td>\n      <td>may</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>57</td>\n      <td>0</td>\n      <td>0.414793</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1.414793</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2398</th>\n      <td>33</td>\n      <td>services</td>\n      <td>married</td>\n      <td>secondary</td>\n      <td>no</td>\n      <td>288.0</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>17</td>\n      <td>apr</td>\n      <td>...</td>\n      <td>306</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.432945</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>-0.567055</td>\n    </tr>\n    <tr>\n      <th>2399</th>\n      <td>42</td>\n      <td>admin.</td>\n      <td>married</td>\n      <td>unknown</td>\n      <td>no</td>\n      <td>642.0</td>\n      <td>yes</td>\n      <td>yes</td>\n      <td>16</td>\n      <td>may</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>509</td>\n      <td>1</td>\n      <td>0.528854</td>\n      <td>-1</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>-1.471146</td>\n    </tr>\n    <tr>\n      <th>2400</th>\n      <td>36</td>\n      <td>technician</td>\n      <td>divorced</td>\n      <td>secondary</td>\n      <td>no</td>\n      <td>566.0</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>20</td>\n      <td>may</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>129</td>\n      <td>0</td>\n      <td>0.508263</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.508263</td>\n    </tr>\n    <tr>\n      <th>2401</th>\n      <td>49</td>\n      <td>blue-collar</td>\n      <td>married</td>\n      <td>secondary</td>\n      <td>no</td>\n      <td>322.0</td>\n      <td>no</td>\n      <td>no</td>\n      <td>14</td>\n      <td>aug</td>\n      <td>...</td>\n      <td>356</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.442157</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>-1</td>\n      <td>-0.557843</td>\n    </tr>\n    <tr>\n      <th>2402</th>\n      <td>33</td>\n      <td>services</td>\n      <td>married</td>\n      <td>secondary</td>\n      <td>no</td>\n      <td>-333.0</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>30</td>\n      <td>jul</td>\n      <td>...</td>\n      <td>264</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0.264698</td>\n      <td>-1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>-0.735302</td>\n    </tr>\n  </tbody>\n</table>\n<p>2403 rows × 26 columns</p>\n</div>"
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Normalize/scale 'balance' (optional: this helps to ensure balance values are comparable with other features)\n",
-    "data['scaled_balance'] = (data['balance'] - data['balance'].min()) / (data['balance'].max() - data['balance'].min())\n",
-    "\n",
-    "# Assign penalties for having loans and default status\n",
-    "data['housing_penalty'] = data['housing'].apply(lambda x: -1 if x == 'yes' else 0)\n",
-    "data['loan_penalty'] = data['loan'].apply(lambda x: -1 if x == 'yes' else 0)\n",
-    "data['default_penalty'] = data['default'].apply(lambda x: -2 if x == 'yes' else 0)\n",
-    "\n",
-    "# Assign job scores (higher for high-income jobs)\n",
-    "job_scores = {\n",
-    "    'management': 2, 'entrepreneur': 2, 'self-employed': 1, 'technician': 1,\n",
-    "    'services': 0, 'admin.': 0, 'student': 1, 'blue-collar': -1,\n",
-    "    'unemployed': -2, 'retired': -1, 'housemaid': -1, 'unknown': 0\n",
-    "}\n",
-    "data['job_score'] = data['job'].map(job_scores)\n",
-    "\n",
-    "# Create the Financial Stability Index (FSI)\n",
-    "data['FSI'] = (data['scaled_balance'] + data['job_score']\n",
-    "               + data['housing_penalty'] + data['loan_penalty'] + data['default_penalty'])\n",
-    "\n",
-    "# Now the FSI has been added to the dataset as a new column\n",
-    "\n",
-    "# Show the first few rows including FSI\n",
-    "print(data[['balance', 'housing', 'loan', 'default', 'job', 'FSI']].head())\n",
-    "\n",
-    "data.to_csv('dataset_with_FSI.csv', index=False)\n",
-    "print(data.columns)\n",
-    "data\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-17T09:21:40.151391200Z",
-     "start_time": "2024-10-17T09:21:40.057639Z"
-    }
-   },
-   "id": "b2f6eddc3c003275"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -300,7 +228,8 @@
       "\n",
       "    accuracy                           0.96       481\n",
       "   macro avg       0.98      0.55      0.58       481\n",
-      "weighted avg       0.96      0.96      0.95       481\n"
+      "weighted avg       0.96      0.96      0.95       481\n",
+      "\n"
      ]
     }
    ],
@@ -337,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -391,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
