did 2 model: Random Forest and Gradient Boosting

--- a/machineLearning/modelEvaluation&HyperparameterTuning.ipynb
+++ b/machineLearning/modelEvaluation&HyperparameterTuning.ipynb
@@ -429,8 +429,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T10:13:44.821130Z",
-     "start_time": "2024-10-17T10:13:44.411061Z"
+     "end_time": "2024-10-17T11:01:34.605805Z",
+     "start_time": "2024-10-17T11:01:34.173806Z"
     }
    },
    "cell_type": "code",
@@ -441,7 +441,7 @@
     "y_pred_rf = rf_model.predict(X_test)\n",
     "\n",
     "\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred_rf);conf_matrix"
+    "conf_matrix_random_forest = confusion_matrix(y_test, y_pred_rf);conf_matrix_random_forest"
    ],
    "id": "a9d76bfbd7b65ff1",
    "outputs": [
@@ -452,25 +452,25 @@
        "       [ 33,   1]], dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T10:14:02.359989Z",
-     "start_time": "2024-10-17T10:14:02.327998Z"
+     "end_time": "2024-10-17T11:01:50.859194Z",
+     "start_time": "2024-10-17T11:01:50.831102Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "report = classification_report(y_test, y_pred_rf)\n",
+    "report_random_forest = classification_report(y_test, y_pred_rf)\n",
     "\n",
-    "print(report)"
+    "print(report_random_forest)"
    ],
    "id": "f3665796e4665586",
    "outputs": [
@@ -490,15 +490,72 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 20
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T11:02:25.460437Z",
+     "start_time": "2024-10-17T11:02:24.895250Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "b52fba68186b1273"
+   "source": [
+    "# Model 2: Gradient Boosting\n",
+    "gb_model = GradientBoostingClassifier(random_state=42)\n",
+    "gb_model.fit(X_train, y_train)\n",
+    "y_pred_gb = gb_model.predict(X_test)\n",
+    "\n",
+    "conf_matrix_gradient_boosting = confusion_matrix(y_test, y_pred_gb);conf_matrix_gradient_boosting"
+   ],
+   "id": "b52fba68186b1273",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[680,   7],\n",
+       "       [ 31,   3]], dtype=int64)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-17T11:03:10.460069Z",
+     "start_time": "2024-10-17T11:03:10.443069Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "report_gradient_boosting = classification_report(y_test, y_pred_gb)\n",
+    "\n",
+    "print(report_gradient_boosting)"
+   ],
+   "id": "e021b898e8686102",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.99      0.97       687\n",
+      "           1       0.30      0.09      0.14        34\n",
+      "\n",
+      "    accuracy                           0.95       721\n",
+      "   macro avg       0.63      0.54      0.55       721\n",
+      "weighted avg       0.93      0.95      0.93       721\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 22
   }
  ],
  "metadata": {
