--- a/machineLearning/modelEvaluation&HyperparameterTuning.ipynb
+++ b/machineLearning/modelEvaluation&HyperparameterTuning.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-17T10:05:46.525315Z",
-     "start_time": "2024-10-17T10:05:46.507287Z"
+     "end_time": "2024-10-17T11:13:24.316255Z",
+     "start_time": "2024-10-17T11:13:24.307254Z"
     }
    },
    "source": [
@@ -21,13 +21,13 @@
     "warnings.filterwarnings('ignore')"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T10:00:34.156944Z",
-     "start_time": "2024-10-17T10:00:34.082948Z"
+     "end_time": "2024-10-17T11:13:24.362259Z",
+     "start_time": "2024-10-17T11:13:24.319261Z"
     }
    },
    "cell_type": "code",
@@ -392,18 +392,18 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T10:10:35.141065Z",
-     "start_time": "2024-10-17T10:10:35.114065Z"
+     "end_time": "2024-10-17T11:13:24.409832Z",
+     "start_time": "2024-10-17T11:13:24.364262Z"
     }
    },
    "cell_type": "code",
@@ -411,12 +411,14 @@
     "X = df.drop(\"y\", axis=1);\n",
     "y = df[\"y\"]\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
-    "\n",
     "label_enc = LabelEncoder()\n",
     "\n",
     "for column in X.select_dtypes(include=['object']).columns:\n",
     "    X[column] = label_enc.fit_transform(X[column])\n",
+    "    \n",
+    "    \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
+    "\n",
     "\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
@@ -424,13 +426,13 @@
    ],
    "id": "67ee2cdcf1cfb838",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:01:34.605805Z",
-     "start_time": "2024-10-17T11:01:34.173806Z"
+     "end_time": "2024-10-17T11:13:24.894900Z",
+     "start_time": "2024-10-17T11:13:24.412833Z"
     }
    },
    "cell_type": "code",
@@ -452,18 +454,18 @@
        "       [ 33,   1]], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 19
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:01:50.859194Z",
-     "start_time": "2024-10-17T11:01:50.831102Z"
+     "end_time": "2024-10-17T11:13:24.988635Z",
+     "start_time": "2024-10-17T11:13:24.908906Z"
     }
    },
    "cell_type": "code",
@@ -480,8 +482,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.95      0.99      0.97       687\n",
-      "           1       0.20      0.03      0.05        34\n",
+      "          no       0.95      0.99      0.97       687\n",
+      "         yes       0.20      0.03      0.05        34\n",
       "\n",
       "    accuracy                           0.95       721\n",
       "   macro avg       0.58      0.51      0.51       721\n",
@@ -490,13 +492,13 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:02:25.460437Z",
-     "start_time": "2024-10-17T11:02:24.895250Z"
+     "end_time": "2024-10-17T11:13:25.548002Z",
+     "start_time": "2024-10-17T11:13:24.991634Z"
     }
    },
    "cell_type": "code",
@@ -517,18 +519,18 @@
        "       [ 31,   3]], dtype=int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:03:10.460069Z",
-     "start_time": "2024-10-17T11:03:10.443069Z"
+     "end_time": "2024-10-17T11:13:25.594311Z",
+     "start_time": "2024-10-17T11:13:25.550980Z"
     }
    },
    "cell_type": "code",
@@ -545,8 +547,8 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.96      0.99      0.97       687\n",
-      "           1       0.30      0.09      0.14        34\n",
+      "          no       0.96      0.99      0.97       687\n",
+      "         yes       0.30      0.09      0.14        34\n",
       "\n",
       "    accuracy                           0.95       721\n",
       "   macro avg       0.63      0.54      0.55       721\n",
@@ -555,7 +557,7 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 34
   }
  ],
  "metadata": {
