finilized some of the work

--- a/machineLearning/modelEvaluation.ipynb
+++ b/machineLearning/modelEvaluation.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:13:24.316255Z",
-     "start_time": "2024-10-17T11:13:24.307254Z"
+     "end_time": "2024-10-17T11:34:04.653750Z",
+     "start_time": "2024-10-17T11:34:04.638750Z"
     }
    },
    "source": [
@@ -21,13 +21,13 @@
     "warnings.filterwarnings('ignore')"
    ],
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:13:24.362259Z",
-     "start_time": "2024-10-17T11:13:24.319261Z"
+     "end_time": "2024-10-17T11:34:04.700750Z",
+     "start_time": "2024-10-17T11:34:04.655747Z"
     }
    },
    "cell_type": "code",
@@ -392,23 +392,23 @@
        "</div>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 29
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:13:24.409832Z",
-     "start_time": "2024-10-17T11:13:24.364262Z"
+     "end_time": "2024-10-17T11:34:04.748437Z",
+     "start_time": "2024-10-17T11:34:04.702751Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "X = df.drop(\"y\", axis=1);\n",
+    "X = df.drop(\"y\", axis=1)\n",
     "y = df[\"y\"]\n",
     "\n",
     "label_enc = LabelEncoder()\n",
@@ -426,13 +426,13 @@
    ],
    "id": "67ee2cdcf1cfb838",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:13:24.894900Z",
-     "start_time": "2024-10-17T11:13:24.412833Z"
+     "end_time": "2024-10-17T11:34:05.204025Z",
+     "start_time": "2024-10-17T11:34:04.751434Z"
     }
    },
    "cell_type": "code",
@@ -454,18 +454,18 @@
        "       [ 33,   1]], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:13:24.988635Z",
-     "start_time": "2024-10-17T11:13:24.908906Z"
+     "end_time": "2024-10-17T11:34:05.267088Z",
+     "start_time": "2024-10-17T11:34:05.207018Z"
     }
    },
    "cell_type": "code",
@@ -492,13 +492,13 @@
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 74
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:13:25.548002Z",
-     "start_time": "2024-10-17T11:13:24.991634Z"
+     "end_time": "2024-10-17T11:34:05.845087Z",
+     "start_time": "2024-10-17T11:34:05.275088Z"
     }
    },
    "cell_type": "code",
@@ -519,18 +519,18 @@
        "       [ 31,   3]], dtype=int64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 33
+   "execution_count": 75
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-17T11:13:25.594311Z",
-     "start_time": "2024-10-17T11:13:25.550980Z"
+     "end_time": "2024-10-17T11:34:05.906302Z",
+     "start_time": "2024-10-17T11:34:05.848088Z"
     }
    },
    "cell_type": "code",
@@ -557,7 +557,7 @@
      ]
     }
    ],
-   "execution_count": 34
+   "execution_count": 76
   }
  ],
  "metadata": {
