finalized machine learning for the exam

--- a/machineLearning/modelEvaluation.ipynb
+++ b/machineLearning/modelEvaluation.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Model Evaluation and Hyperparameter Tuning Project\n",
+    "\n",
+    "In this project, we evaluate multiple machine learning models on a classification task and employ techniques like resampling to handle class imbalance. We compare the models based on accuracy, precision, recall, and F1 score."
+   ],
+   "id": "ee0aef02c47c811"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
@@ -21,16 +31,22 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "from imblearn.combine import SMOTEENN\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from xgboost import XGBClassifier  # Importing XGBClassifier\n",
-    "import lightgbm as lgb  # Importing LightGBM\n",
-    "\n",
     "import warnings\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ],
    "outputs": [],
    "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Data Preparation\n",
+    "\n",
+    "The data is split into training and test sets. To handle class imbalance, we use **SMOTE combined with Edited Nearest Neighbors (ENN)**, an oversampling technique that creates synthetic samples and removes overlapping samples."
+   ],
+   "id": "a452e9d37e692a09"
   },
   {
    "metadata": {
@@ -246,7 +262,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "8a29d69c8e6b7ac4"
   },
   {
    "cell_type": "markdown",
@@ -255,7 +272,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "a0998bae9739a8d5"
   },
   {
    "cell_type": "code",
@@ -304,7 +322,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "677285d2684b4436"
   },
   {
    "cell_type": "code",
@@ -354,7 +373,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "385b5867073145db"
   },
   {
    "cell_type": "code",
@@ -378,24 +398,6 @@
     }
    ],
    "source": [
-    "# Load the data\n",
-    "df = pd.read_csv(\"../dataset/updated_bank.csv\")\n",
-    "X = df.drop(\"y\", axis=1)\n",
-    "y = df[\"y\"]\n",
-    "\n",
-    "# Label Encoding for categorical features\n",
-    "label_enc = LabelEncoder()\n",
-    "for column in X.select_dtypes(include=['object']).columns:\n",
-    "    X[column] = label_enc.fit_transform(X[column])\n",
-    "\n",
-    "# Split the dataset\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42, stratify=y)\n",
-    "\n",
-    "# Scale the features\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
-    "\n",
     "# Handle class imbalance using SMOTE combined with ENN\n",
     "smote_enn = SMOTEENN(random_state=42)\n",
     "X_train_res, y_train_res = smote_enn.fit_resample(X_train, y_train)\n",
@@ -431,7 +433,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "c975580bc1bfa213"
   },
   {
    "cell_type": "code",
@@ -499,7 +502,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "50fe41201f81a9f7"
   },
   {
    "cell_type": "code",
@@ -549,7 +553,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "97e9f57c2379bdf3"
   },
   {
    "cell_type": "code",
@@ -591,7 +596,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "34f7964e5f9d37b3"
   },
   {
    "cell_type": "markdown",
@@ -600,7 +606,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "a591a3126329a018"
   },
   {
    "cell_type": "code",
@@ -663,7 +670,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "54a3bb341b49d60c"
   },
   {
    "cell_type": "markdown",
@@ -673,7 +681,8 @@
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "2785a18d9c1186b4"
   },
   {
    "cell_type": "code",
@@ -689,15 +698,7 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, VotingClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
     "\n",
-    "# Oversampling with SMOTE\n",
-    "smote = SMOTE(random_state=42)\n",
-    "X_train_res, y_train_res = smote.fit_resample(X_train, y_train)\n",
     "\n",
     "# Define a more comprehensive parameter grid\n",
     "param_grid = {\n",
@@ -726,11 +727,13 @@
     "\n",
     "# Check results\n",
     "print(\"Best parameters found: \", grid_search.best_params_)\n",
-    "print(\"Best cross-validation score: \", grid_search.best_score_)\n"
+    "print(\"Best cross-validation score: \", grid_search.best_score_)\n",
+    "print(classification_report(y_test, y_pred_best))"
    ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "id": "b79b9ada0a763463"
   }
  ],
  "metadata": {
